--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
     - "3.4"
 install:
     - pip install numpy
+    - pip install pynrrd
     - pip install coveralls # for coverage testing
     - python setup.py install
 script:
